Commit inicial do backend

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tep-fullstack",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/Wal-dreamer/TEP-Fullstack/issues"
   },
-  "homepage": "https://github.com/Wal-dreamer/TEP-Fullstack#readme"
+  "homepage": "https://github.com/Wal-dreamer/TEP-Fullstack#readme",
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "mongoose": "^9.0.1"
+  }
 }
